--- a/connect-four/connect4.css
+++ b/connect-four/connect4.css
@@ -1,9 +1,10 @@
 /* game board table */
 
+
 #board td {
-  width: 50px;
-  height: 50px;
-  border: solid 1px #666;
+  width: 80px;
+  height: 80px;
+  border: solid 5px #ff847c;
 }
 
 /* pieces are div within game table cells: draw as colored circles */
@@ -16,11 +17,11 @@
 }
 
 .piece.p1 {
-  background-color: red;
+  background-color: #e84a5f;
 }
 
 .piece.p2 {
-  background-color: blue;
+  background-color: #99b898;
 }
 
 /* column-top is table row of clickable areas for each column */
@@ -30,5 +31,6 @@
 }
 
 #column-top td:hover {
-  background-color: gold;
+  background-color: #fc913a;
 }
+
